endereco de image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <figure>
-            <img src="/img/logo.png" alt="logo da globo">
+            <img src="./img/logo.png" alt="logo da globo">
         </figure>
         <nav>
             <ul>
@@ -26,5 +26,12 @@
             </ul>
         </nav>
     </header>
+    <div>
+        <main></main>
+        <section>
+            <aside></aside>
+            <aside></aside>
+        </section>
+    </div>
 </body>
 </html>
